--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
         
       <p>The ITC Web Team at IIT Bombay is responsible for designing, developing, and maintaining websites and digital platforms that support the Institute Technical Council’s activities. Their goal is to ensure smooth online communication, showcase events, and provide resources to the student technical community through modern, responsive, and user-friendly web solutions.</p>
-    <div class="projects">
+      <div class="projects">
           <h2>Latest Projects</h2>
-          <ul class="project-list">
-            <li><strong>Project 1:</strong> A responsive website for a local business.</li>
-            <li><strong>Project 2:</strong> An interactive web application for data visualization.</li>
-            <li><strong>Project 3:</strong> A portfolio website showcasing our work.</li>
-          </ul>
-        </div>
-        <div>
-        <h2>Future projects</h2>
-          <p>we will make new projects for exploring campus and add them many coun cil so that everyone can access these council</p>
-        </div>
-     </main>
+            <ul class="project-list">
+              <li><strong>Project 1:</strong> A responsive website for a local business.</li>
+              <li><strong>Project 2:</strong> An interactive web application for data visualization.</li>
+              <li><strong>Project 3:</strong> A portfolio website showcasing our work.</li>
+            </ul>
+      </div>
+      <div>
+          <h2 class="Future-project">Future projects</h2>
+            <p>we will make new projects for exploring campus and add them many council so that everyone can access these council</p>
+      </div>
+    </main>
     <footer>
         <p>&copy; 2025 ITC Web Team. All rights reserved.</p>
     </footer>
