--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="img/images.png" type="image"/png">
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Reset and Base Styles */
-* {
+      
+* { 
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -19,28 +19,37 @@
 <body>
   <a href="index.html" class="back-button">← Back</a>
   <main class="about-section">
+    <div>
     <h1>About Institute Technical Council (ITC)</h1>
   
     <p>
       The <strong>Institute Technical Council (ITC)</strong> at IIT Bombay is committed to fostering a strong technical culture on campus. It serves as the central body that promotes innovation, hands-on learning, and technical excellence among students.
     </p>
+  </div>
   
+    <div>
+
     <h2>Our Mission</h2>
     <p>
       To empower students with the knowledge, tools, and platforms needed to explore, create, and innovate in diverse technical fields.
     </p>
+  </div>
   
+  <div>
     <h2>Our Goals</h2>
     <ul>
       <li>Encourage technical skill development through competitions, workshops, and mentorship programs.</li>
       <li>Promote interdisciplinary collaboration among technical clubs and student bodies.</li>
       <li>Support and represent student-led technical initiatives at the institute and beyond.</li>
     </ul>
+  </div>
   
+  <div>
     <h2>What We Do</h2>
     <p>
       ITC oversees various technical clubs and teams, organizes flagship events like Techfest and Ideate, and builds platforms like the GC Portal and ITC main website to streamline technical engagement. We also support students in participating in national and international competitions.
     </p>
+  </div>
   </main>
   
 </body>
