--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITC web Team</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/images.png" type="images.png">
+    <link rel="icon" href="images.png" type="images.png">
 </head>
 <body>
  
