--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  
-    <img src="img/download.png" alt="itc logo" class="logo">
+    <img src="download.png" alt="itc logo" class="logo">
 
             <nav>
                 <ul>
