--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
-    <link rel="icon" href="img/images.png" type="image"/png">
+    <link rel="icon" href="images.png" type="image"/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
