--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="icon" href="images.png" type="image"/png">
+    <link rel="icon" href="img/images.png" type="image"/png">
     <link rel="stylesheet" href="style.css">
     <style>
       
@@ -20,37 +20,46 @@
   <a href="index.html" class="back-button">← Back</a>
   <main class="about-section">
     <div>
-    <h1>About Institute Technical Council (ITC)</h1>
-  
-    <p>
-      The <strong>Institute Technical Council (ITC)</strong> at IIT Bombay is committed to fostering a strong technical culture on campus. It serves as the central body that promotes innovation, hands-on learning, and technical excellence among students.
-    </p>
+      <h1>About Institute Technical Council (ITC)</h1>
+    
+      <p>
+        The <strong>Institute Technical Council (ITC)</strong> at IIT Bombay is committed to fostering a strong technical culture on campus. It serves as the central body that promotes innovation, hands-on learning, and technical excellence among students.
+      </p>
+    </div>
+<div class="container">
+<div class="section">
+  <h2>Our Mission</h2>
+  <div class="content">
+    <p>To empower students with the knowledge, tools, and platforms needed to explore, create, and innovate in diverse technical fields.</p>
+    <p>To empower students with the knowledge, tools, and platforms needed to explore, create, and innovate in diverse technical fields.</p>
+    <p>To empower students with the knowledge, tools, and platforms needed to explore, create, and innovate in diverse technical fields.</p>
   </div>
-  
-    <div>
+</div>
 
-    <h2>Our Mission</h2>
-    <p>
-      To empower students with the knowledge, tools, and platforms needed to explore, create, and innovate in diverse technical fields.
-    </p>
-  </div>
-  
-  <div>
-    <h2>Our Goals</h2>
+<div class="section">
+  <h2>Our Goals</h2>
+  <div class="content">
     <ul>
+      <li>Encourage technical skill development through competitions, workshops, and mentorship programs.</li>
+      <li>Promote interdisciplinary collaboration among technical clubs and student bodies.</li>
+      <li>Support and represent student-led technical initiatives at the institute and beyond.</li>
       <li>Encourage technical skill development through competitions, workshops, and mentorship programs.</li>
       <li>Promote interdisciplinary collaboration among technical clubs and student bodies.</li>
       <li>Support and represent student-led technical initiatives at the institute and beyond.</li>
     </ul>
   </div>
-  
-  <div>
-    <h2>What We Do</h2>
-    <p>
-      ITC oversees various technical clubs and teams, organizes flagship events like Techfest and Ideate, and builds platforms like the GC Portal and ITC main website to streamline technical engagement. We also support students in participating in national and international competitions.
-    </p>
-  </div>
-  </main>
-  
+</div>
+
+<div class="section">
+  <h2>What We Do</h2>
+  <div class="content">
+    <ul>
+      <li>ITC oversees various technical clubs and teams, organizes flagship events like Techfest and Ideate, and builds platforms like the GC Portal. We also support students in participating in national and international competitions.</li>
+      <li>ITC oversees various technical clubs and teams, organizes flagship events like Techfest and Ideate, and builds platforms like the GC Portal. We also support students in participating in national and international competitions.</li>
+      <li>ITC oversees various technical clubs and teams, organizes flagship events like Techfest and Ideate, and builds platforms like the GC Portal. We also support students in participating in national and international competitions.</li>
+ </ul>
+</div>
+</div>
+</div>
 </body>
 </html>
