--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
     <img src="download.png" alt="itc logo" class="logo">
 
-            <nav>
+            <nav class="nav-scroll">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
