--- a/about.html
+++ b/about.html
@@ -9,7 +9,15 @@
 
 </head>
 <body>
-  <a href="index.html" class="back-button">← Back</a>
+  <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="FAQs.html">FAQs</a></li>
+        </ul>
+    </nav>
   <main class="about-section">
     <div>
       <h1>About Institute Technical Council (ITC)</h1>
