--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="images.png" type="image/png" />  
 </head>
 <body>
-
+<button id="myButton">Click Me</button>
   <nav class="nav-scroll">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -36,6 +36,11 @@
       <button type="submit">Send Message</button>
     </form>
   </main>
+  <script
+  document.getElementById(myButton).onclick = function(){
+    <a href="index.html">TRY</a>
+  }
+    ></script>
 
   <script src="script.js"></script>
 </body>
