--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="images.png" type="image/png" />  
 </head>
 <body>
-<button id="myButton">Click Me</button>
+<button id="myButton">TRY</button>
   <nav class="nav-scroll">
         <ul>
             <li><a href="index.html">Home</a></li>
