--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     </form>
   </main>
   <script
-  document.getElementById(myButton).onclick = function(){
+  document.getElementById("myButton").onclick = function(){
     <a href="index.html">TRY</a>
   }
     ></script>
