--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+rn<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -38,7 +38,7 @@
   </main>
   <script
   document.getElementById("myButton").onclick = function(){
-    <a href="index.html">TRY</a>
+   return <a href="index.html">TRY</a>
   }
     ></script>
 
