--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="icon" href="images.png" type="image"/png">
+    <link rel="icon" href="img/download.png" type="image"/png">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -30,23 +30,9 @@
 <div class="section">
   <h2>Our Mission</h2>
   <div class="content">
-    <p>To empower students with the knowledge, tools, and platforms needed to explore, create, and innovate in diverse technical fields.</p>
-    <p>To empower students with the knowledge, tools, and platforms needed to explore, create, and innovate in diverse technical fields.</p>
-    <p>To empower students with the knowledge, tools, and platforms needed to explore, create, and innovate in diverse technical fields.</p>
-  </div>
-</div>
-
-<div class="section">
-  <h2>Our Goals</h2>
-  <div class="content">
-    <ul>
-      <li>Encourage technical skill development through competitions, workshops, and mentorship programs.</li>
-      <li>Promote interdisciplinary collaboration among technical clubs and student bodies.</li>
-      <li>Support and represent student-led technical initiatives at the institute and beyond.</li>
-      <li>Encourage technical skill development through competitions, workshops, and mentorship programs.</li>
-      <li>Promote interdisciplinary collaboration among technical clubs and student bodies.</li>
-      <li>Support and represent student-led technical initiatives at the institute and beyond.</li>
-    </ul>
+    <p>we aim to create custom web applications and portals tailored to the needs of the Institute Technical Council and the institute. This includes platforms for event management, technical showcases, and more.</p>
+    <p>we focus on combining creative design with robust development to deliver seamless digital experiences that are both functional and visually appealing.</p>
+    <p>we provide ongoing support and maintenance for ITC's digital platforms, ensuring smooth operation and timely updates.</p>
   </div>
 </div>
 
@@ -54,9 +40,11 @@
   <h2>What We Do</h2>
   <div class="content">
     <ul>
-      <li>ITC oversees various technical clubs and teams, organizes flagship events like Techfest and Ideate, and builds platforms like the GC Portal. We also support students in participating in national and international competitions.</li>
-      <li>ITC oversees various technical clubs and teams, organizes flagship events like Techfest and Ideate, and builds platforms like the GC Portal. We also support students in participating in national and international competitions.</li>
-      <li>ITC oversees various technical clubs and teams, organizes flagship events like Techfest and Ideate, and builds platforms like the GC Portal. We also support students in participating in national and international competitions.</li>
+      <li><b><a href="https://sso.tech-iitb.org/">ITC SSO Portal:</a></b> A streamlined authentication platform enabling users to access multiple ITC applications with a single login, enhancing user convenience and security.</li>
+      <li> <b><a href="https://gc.tech-iitb.org/"> Technical GC Portal:</a></b> A robust portal for managing the General Championship, including event registrations, scoring, and updates, tailored to streamline competitive activities within the institute.</li>
+      <li> <b><a href="https://itc.gymkhana.iitb.ac.in/energyclub/#/homepage">Energy Club website:</a> </b> A dedicated platform showcasing the Energy Club's projects, events, and initiatives, promoting awareness and collaboration in the field of sustainable energy.</li>
+      <li> <b><a href="https://itc.gymkhana.iitb.ac.in/">ITC Main Website:</a></b> The central hub for all ITC-related information and announcements, serving as a gateway to various technical council activities and resources.</li>
+      <li> <b>Web Team Portfolio:</b> The official portfolio website showcasing our team and projects. Built with React and modern web technologies..</li>
  </ul>
 </div>
 </div>
