--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Us</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="images.png" type="image/png" />  
+  <link rel="icon" href="img/download.png" type="image/png" />  
 </head>
 <body>
   <nav class="nav-scroll">
