--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
-    <link rel="icon" href="images.png" type="image"/png">
+    <link rel="icon" href="img/download.png" type="image"/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,17 +23,16 @@
     <section class="events-section">
       <h2>Past Events</h2>
       <ul class="event-list">
-        <li><span class="event-title">Web Development Workshop:</span> Join us for a hands-on workshop on modern web development techniques.</li>
-        <li><span class="event-title">Hackathon:</span> Participate in our annual hackathon and showcase your skills!</li>
+        <li><span class="event-title">Inter IIT Tech Meet 13.0:</span> The team showcased their technical prowess by contributing to this prestigious intercollegiate event</li>
+        <li><span class="event-title">AI & Robotics Workshop:</span> Organized to promote innovation and learning in cutting-edge technologies</li>
       </ul>
     </section>
   
     <section class="events-section">
       <h2>Upcoming Events</h2>
       <ul class="event-list">
-        <li><span class="event-title">Web Development Workshop:</span> Join us for a hands-on workshop on modern web development techniques.</li>
-        <li><span class="event-title">Hackathon:</span> Participate in our annual hackathon and showcase your skills!</li>
-        <li><span class="event-title">Networking Event:</span> Connect with other web developers and industry professionals.</li>
+        <li><span class="event-title">Hackathon (May 10, 2025):</span> An exciting event aimed at fostering creativity and collaboration among developers.</li>
+        <li><span class="event-title">Tech Fest 2025:</span> A platform to demonstrate innovative projects and engage with the tech community</li>
       </ul>
     </section>
   </div>
