--- a/events.html
+++ b/events.html
@@ -3,40 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events</title>
-    <link rel="icon" href="img/download.png" type="image"/png">
+    <title>ITC web Team</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/download.png" type="images.png">
 </head>
 <body>
-  <nav class="nav-scroll">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="FAQs.html">FAQs</a></li>
-        </ul>
-    </nav>
+ 
+    <img src="img/download().png" alt="itc logo" class="logo">
 
-
-  <div class="events-container">
-    <section class="events-section">
-      <h2>Past Events</h2>
-      <ul class="event-list">
-        <li><span class="event-title">Inter IIT Tech Meet 13.0:</span> The team showcased their technical prowess by contributing to this prestigious intercollegiate event</li>
-        <li><span class="event-title">AI & Robotics Workshop:</span> Organized to promote innovation and learning in cutting-edge technologies</li>
-      </ul>
-    </section>
-  
-    <section class="events-section">
-      <h2>Upcoming Events</h2>
-      <ul class="event-list">
-        <li><span class="event-title">Hackathon (May 10, 2025):</span> An exciting event aimed at fostering creativity and collaboration among developers.</li>
-        <li><span class="event-title">Tech Fest 2025:</span> A platform to demonstrate innovative projects and engage with the tech community</li>
-      </ul>
-    </section>
-  </div>
-  
-    <footer>We will be very happy to see you in the upcoming event</footer>
+            <nav class="nav-scroll">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="FAQs.html">FAQs</a></li>
+                </ul>
+            </nav>
 </body>
+    <main class="Home ">
+      <div>
+        <h1>Welcome to the ITC Web Team!</h1>
+        <p>We are a team of passionate web developers dedicated to creating amazing web experiences.</p>
+        <p>Check out our latest projects and events!</p>
+      </div>
+
+        <div>
+      <p>The ITC Web Team at IIT Bombay is responsible for designing, developing, and maintaining websites and digital platforms that support the Institute Technical Council’s activities. Their goal is to ensure smooth online communication, showcase events, and provide resources to the student technical community through modern, responsive, and user-friendly web solutions.</p>
+  </div>   
+   <div class="projects">
+          <h2>Latest Projects</h2>
+            <ul class="project-list">
+              <li><strong>Project 1:</strong> A responsive website for a local business.</li>
+              <li><strong>Project 2:</strong> An interactive web application for data visualization.</li>
+              <li><strong>Project 3:</strong> A portfolio website showcasing our work.</li>
+            </ul>
+      </div>
+      <div>
+          <h2 class="Future-project">Future projects</h2>
+            <p>We are making a project through which new students can know about all councils and tech teams</p>
+      </div>
+    </main>
+    <footer>
+        <p>&copy; 2025 ITC Web Team. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
 </html>
