--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITC web Team</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images.png" type="images.png">
+    <link rel="icon" href="img/download.png" type="images.png">
 </head>
 <body>
  
-    <img src="download.png" alt="itc logo" class="logo">
+    <img src="img/download().png" alt="itc logo" class="logo">
 
             <nav class="nav-scroll">
                 <ul>
@@ -28,9 +28,10 @@
         <p>Check out our latest projects and events!</p>
       </div>
 
-        
+        <div>
       <p>The ITC Web Team at IIT Bombay is responsible for designing, developing, and maintaining websites and digital platforms that support the Institute Technical Council’s activities. Their goal is to ensure smooth online communication, showcase events, and provide resources to the student technical community through modern, responsive, and user-friendly web solutions.</p>
-      <div class="projects">
+  </div>   
+   <div class="projects">
           <h2>Latest Projects</h2>
             <ul class="project-list">
               <li><strong>Project 1:</strong> A responsive website for a local business.</li>
@@ -40,7 +41,7 @@
       </div>
       <div>
           <h2 class="Future-project">Future projects</h2>
-            <p>we will make new projects for exploring campus and add them many council so that everyone can access these council</p>
+            <p>We are making a project through which new students can know about all councils and tech teams</p>
       </div>
     </main>
     <footer>
