--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITC web Team</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/download.png" type="images.png">
+    <link rel="icon" href="download.png" type="images.png">
 </head>
 <body>
  
-    <img src="img/download().png" alt="itc logo" class="logo">
+    <img src="download().png" alt="itc logo" class="logo">
 
             <nav class="nav-scroll">
                 <ul>
