--- a/FAQs.html
+++ b/FAQs.html
@@ -37,5 +37,8 @@
     </main>
  
     <script src="script.js"></script>
+        <footer>
+        <p>&copy; 2025 ITC Web Team. All rights reserved.</p>
+    </footer>
 </body>
 </html>
