--- a/about.html
+++ b/about.html
@@ -49,5 +49,8 @@
 </div>
 </div>
 </div>
+          <footer>
+        <p>&copy; 2025 ITC Web Team. All rights reserved.</p>
+    </footer>
 </body>
 </html>
