--- a/contact.html
+++ b/contact.html
@@ -36,5 +36,8 @@
     </form>
   </main>
   <script src="script.js"></script>
+      <footer>
+        <p>&copy; 2025 ITC Web Team. All rights reserved.</p>
+    </footer>
 </body>
 </html>
