--- a/events.html
+++ b/events.html
@@ -37,6 +37,9 @@
     </section>
   </div>
   
-    <footer>We will be very happy to see you in the upcoming event</footer>
+    <p>We will be very happy to see you in the upcoming event</p>
+        <footer>
+        <p>&copy; 2025 ITC Web Team. All rights reserved.</p>
+    </footer>
 </body>
 </html>
