--- a/events.html
+++ b/events.html
@@ -37,8 +37,7 @@
     </section>
   </div>
   
-    <p>We will be very happy to see you in the upcoming event</p>
-        <footer>
+    <footer>We will be very happy to see you in the upcoming event <br>
         <p>&copy; 2025 ITC Web Team. All rights reserved.</p>
     </footer>
 </body>
