--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,13 +29,16 @@
 <div class="container">
 <div class="section">
   <h2>Our Mission</h2>
+    <div class="content">
     <p>we aim to create custom web applications and portals tailored to the needs of the Institute Technical Council and the institute. This includes platforms for event management, technical showcases, and more.</p>
     <p>we focus on combining creative design with robust development to deliver seamless digital experiences that are both functional and visually appealing.</p>
     <p>we provide ongoing support and maintenance for ITC's digital platforms, ensuring smooth operation and timely updates.</p>
 </div>
+</div>
 
 <div class="section">
   <h2>What We Do</h2>
+    <div class="content">
     <ul>
       <li><b><a href="https://sso.tech-iitb.org/">ITC SSO Portal:</a></b> A streamlined authentication platform enabling users to access multiple ITC applications with a single login, enhancing user convenience and security.</li>
       <li> <b><a href="https://gc.tech-iitb.org/"> Technical GC Portal:</a></b> A robust portal for managing the General Championship, including event registrations, scoring, and updates, tailored to streamline competitive activities within the institute.</li>
@@ -43,6 +46,7 @@
       <li> <b><a href="https://itc.gymkhana.iitb.ac.in/">ITC Main Website:</a></b> The central hub for all ITC-related information and announcements, serving as a gateway to various technical council activities and resources.</li>
       <li> <b>Web Team Portfolio:</b> The official portfolio website showcasing our team and projects. Built with React and modern web technologies..</li>
  </ul>
+</div>
 </div>
 </div>
           <footer>
