--- a/events.html
+++ b/events.html
@@ -23,16 +23,16 @@
     <section class="events-section">
       <h2>Past Events</h2>
       <ul class="event-list">
-        <li><span class="event-title">Inter IIT Tech Meet 13.0:</span> The team showcased their technical prowess by contributing to this prestigious intercollegiate event</li>
-        <li><span class="event-title">AI & Robotics Workshop:</span> Organized to promote innovation and learning in cutting-edge technologies</li>
+        <li><b>Inter IIT Tech Meet 13.0:</b> The team showcased their technical prowess by contributing to this prestigious intercollegiate event</li>
+        <li><b>AI & Robotics Workshop:</b> Organized to promote innovation and learning in cutting-edge technologies</li>
       </ul>
     </section>
   
     <section class="events-section">
       <h2>Upcoming Events</h2>
       <ul class="event-list">
-        <li><span class="event-title">Hackathon (May 10, 2025):</span> An exciting event aimed at fostering creativity and collaboration among developers.</li>
-        <li><span class="event-title">Tech Fest 2025:</span> A platform to demonstrate innovative projects and engage with the tech community</li>
+        <li><b>Hackathon (May 10, 2025):</b> An exciting event aimed at fostering creativity and collaboration among developers.</li>
+        <li><b>Tech Fest 2025:</b> A platform to demonstrate innovative projects and engage with the tech community</li>
       </ul>
     </section>
   </div>
