--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
    <div class="projects">
           <h2>Latest Projects</h2>
             <ul class="project-list">
-              <li><strong>Project 1:</strong> A responsive website for a local business.</li>
-              <li><strong>Project 2:</strong> An interactive web application for data visualization.</li>
-              <li><strong>Project 3:</strong> A portfolio website showcasing our work.</li>
+              <li><b>Project 1:</b> A responsive website for a local business.</li>
+              <li><b>Project 2:</b> An interactive web application for data visualization.</li>
+              <li><b>Project 3:</b> A portfolio website showcasing our work.</li>
             </ul>
       </div>
       <div>
